@@ -41,6 +41,7 @@ then
 	if [ -f /var/log/wtmpx ]; then rm -f /var/log/wtmpx*; fi
 	if [ -e /var/run/utmpd.ro ]; then rm -f /var/run/utmpd.ro; fi
 	if [ -e /var/run/utmpd.rw ]; then rm -f /var/run/utmpd.rw; fi
+	if [ ! -L /usr/share/doc/LIBC-dev ]; then rm -rf /usr/share/doc/LIBC; fi
     fi
 
     # NSS authentication trouble guard
