@@ -5,6 +5,8 @@ glibc (2.3.6-6) UNRELEASED; urgency=low
     by a separate package called tzdata.
   * Split out binaries from libc6 into libc-bin, and binaries from libc6-bin
     into libc-bin-dev.  (Closes: #330735)
+  * Remove old /usr/share/doc/libc* directories in preinst, so they can be
+    replaced by symlinks by dpkg.
   * Put each test log file in the corresponding package instead of putting all
     of them in libc6.
   * Remove sparc/local-sparc64-fixups.diff as /lib64 and /usr/lib64 are now a
